Bug 38116 - FILESAVE as .doc destroys frame border properties
Summary: FILESAVE as .doc destroys frame border properties
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta1 tar...
Keywords: regression
: 40927 (view as bug list)
Depends on:
Blocks: 44768
  Show dependency treegraph
 
Reported: 2011-06-09 08:08 UTC by David Burleigh
Modified: 2012-08-03 09:10 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (126.31 KB, application/vnd.oasis.opendocument.text)
2011-11-26 00:46 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Burleigh 2011-06-09 08:08:28 UTC
I place a frame on a page, and set the borders of the frame to a particular line style, and all seems fine. I can print the page and the borders are printed as expected. However, if I close the file and then reopen it, the borders are gone.
Comment 1 Jean-Baptiste Faure 2011-07-17 13:18:04 UTC
What file format are you using to save your doc? 

I have the same problem when I save my doc in MS-Word-97/2000/XP format. Frame border disappears when I reopen the file in LibO 3.4.1 or 3.4.2 rc1 but it is there when I reopen it in LibO 3.3.3 or in MS-Word-viewer.

No problem if I save my doc in OpenDocument Format.

Best regards. JBF
Comment 2 pierre-yves samyn 2011-07-18 08:46:13 UTC
Hello

(In reply to comment #1)
> I have the same problem when I save my doc in MS-Word-97/2000/XP format. Frame
> border disappears when I reopen the file in LibO 3.4.1 or 3.4.2 rc1 but it is
> there when I reopen it in LibO 3.3.3 or in MS-Word-viewer.
> 
> No problem if I save my doc in OpenDocument Format.


I reproduce this with XP &  LibO 3.4.2Rc1 buildid=340m1(Build:201)

Regards

Pierre-Yves
Comment 3 dsoetebeer 2011-08-31 21:14:08 UTC
In version 3.4.3 (Windows 7 X86-64), the error is also available.

The file has been stored in odt-format.
Comment 4 Max 2011-09-26 09:59:13 UTC
Confirm still present on version 3.4.3 (Windows 7 X86-64)

Since the frame borders remain visible in Microsoft Word Viewer, this appears to be a problem reading the .doc file correctly, not in writing it.

Steps to reproduce:
1. Insert frame into document
2. Set a border for the frame
3. Save document in MS Word 97 format
4. Reopen document in Writer - borders invisible
5. Open the document in Microsoft Word Viewer - borders visible
Comment 5 Rainer Bielefeld Retired 2011-11-26 00:28:19 UTC
We have 2 problems here.

One is a FILESAVE problem. Saving attached sample document as .doc (XP) destroys the border formatting, opening the document with MS Word Viewer will show a single line border around the frame although it should be a double line.

Confirmed with Comment 1
[Reproducible] with "LibreOffice 3.4.4  - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:402)]" and still a problem with Server installation of MSVC Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) ENGLISH UI [(Build ID:  4f11d0a-adcf6d5-c4bb9bd)]" Windows_2008R8 - 111118)

Might be related to "Bug 38498 - EDITING - frame shadow settings not stored"


For the FILEOPEN problem I will open a new bug if I do not find a DUP

@Cédric
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 6 Rainer Bielefeld Retired 2011-11-26 00:29:05 UTC
*** Bug 40927 has been marked as a duplicate of this bug. ***
Comment 7 Rainer Bielefeld Retired 2011-11-26 00:46:21 UTC
Created attachment 53860 [details]
Sample Document

See Comment 5
Comment 8 Rpnpif 2011-11-30 09:35:32 UTC
Hi,
The default border line size is now 0.25Pt, that is very little.
On my screen, these borders are not displayed until I increase the zoom.
Perhaps sometimes this bug is related to this issue.

I think that 0.25Pt is too little as default, why this change in LO ?
Comment 9 Michael Stahl 2012-05-23 04:52:03 UTC
works in OOo 3.4beta

possibly duplicate of bug 43249 and bug 46563
Comment 10 Not Assigned 2012-06-11 11:37:48 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0044bd800b742f28056805bb163ff243cf4095f3

fdo#38116, fdo#49438: fix double hairline border drawing some more:
Comment 11 Not Assigned 2012-06-11 11:43:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24076bea4fd290bd5f3babcb34a9a9b0831a0387&g=libreoffice-3-6

fdo#38116, fdo#49438: fix double hairline border drawing some more:


It will be available in LibreOffice 3.6.
Comment 12 Michael Stahl 2012-06-11 11:59:57 UTC
there were 2 problems here:

1. the border was not imported properly in WW8 filter,
   which is duplicate of bug 46563
2. the drawing of the border was accidentally disabled by 
   the fix for bug 49438

the commit in comment #10 fixes problem 2.
Comment 13 Not Assigned 2012-06-12 00:42:06 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ee04b49642b90d36aa51d5611d0def8f7c0516e&g=libreoffice-3-5

fdo#38116, fdo#49438: fix double hairline border drawing some more:


It will be available in LibreOffice 3.5.5.
Comment 14 Rainer Bielefeld Retired 2012-08-03 09:10:48 UTC
We need exact and correct target information for automated lists in Wiki and LibO Web Site.