fdo#38116, fdo#49438: fix double hairline border drawing some more:

These two fixes interact in a bad way:
49bd0e4e6bb0ed0671de72d84700ddcc49828f69 (fdo#48647)
ee42895d684be9430a414adf3f569d279d437148 (fdo#49438)

The problem is that now hairline borders are detected properly, and the
double hairline borders are clipped to the right area, but the clipping
polygon actually collapses to a single line for the hairline border,
with the result that the clipped border line is an empty PolyPolygon
for e.g. a double border 3 twips wide.

Fix this by enforcing a minimum clipping polygon width of 2 units,
which seems to work nicely.

Change-Id: If9cf9f0ed6a5c837860c2313a84cd26b07734b03